solved background issues

--- a/src/App.scss
+++ b/src/App.scss
@@ -458,7 +458,7 @@ header h1 {
 }
 
 #skills {
-	background: #034159;
+	background: #034159a8;
 	min-height: 200px;
 	width: 100%;
 	overflow: hidden;
