changed the background

--- a/src/App.scss
+++ b/src/App.scss
@@ -298,7 +298,7 @@ header h1 {
 }
 
 #resume {
-	background: #038C3E;
+	background: #038c3e7a;
 }
 
 .experience-icon {
@@ -421,7 +421,7 @@ header h1 {
 }
 
 #portfolio {
-	background: #025951;
+	background: #02595191;
 	padding-bottom: 5%;
 }
 
